--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   http: ^0.13.6
   table_calendar: ^3.2.0
   image_picker: ^1.2.0
-
+  geolocator: ^14.0.2
+  intl: ^0.20.2
 
 
   # The following adds the Cupertino Icons font to your application.
