--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   image_picker: ^1.2.0
   geolocator: ^14.0.2
   intl: ^0.20.2
-
+  google_maps_flutter: ^2.13.1
+  url_launcher: ^6.3.2
+  shared_preferences: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
